<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelephoneActivity">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@id/optionScrollView"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-89dp"
        android:ems="10"
        android:hint="@string/Telephone_sms_option_different"
        android:inputType="text" />

    <Button
        android:id="@+id/smsButton"
        android:layout_width="120dp"
        android:layout_height="58dp"
        android:layout_alignBottom="@id/optionScrollView"
        android:layout_marginStart="142dp"
        android:layout_marginBottom="-190dp"
        android:text="@string/Telephone_sms_button" />

    <Button
        android:id="@+id/dialButton"
        android:layout_width="120dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/Telephone_dial_button" />

    <EditText
        android:id="@+id/editTextPhone2"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="60dp"
        android:layout_toRightOf="@id/dialButton"
        android:ems="10"
        android:hint="@string/Telephone_number_hint"
        android:inputType="phone" />

    <ScrollView
        android:id="@+id/optionScrollView"
        android:layout_width="365dp"
        android:layout_height="258dp"
        android:layout_alignBottom="@id/dialButton"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-292dp">

        <LinearLayout
            android:id="@+id/optLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/smsOpt1"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:text="@string/Telephone_sms_option1" />

                <RadioButton
                    android:id="@+id/smsOpt2"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:text="@string/Telephone_sms_option2" />

                <RadioButton
                    android:id="@+id/smsOpt3"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:text="@string/Telephone_sms_option3" />

                <RadioButton
                    android:id="@+id/smsOpt4"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:text="@string/Telephone_sms_option4" />

                <RadioButton
                    android:id="@+id/smsOpt5"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:text="@string/Telephone_sms_option5" />

                <RadioButton
                    android:id="@+id/smsOpt6"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:text="@string/Telephone_sms_option6" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>