<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/main_name"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="410dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/image" />

    <TextView
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/main_nickname"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="66dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/telephoneButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/Activity1_title"
            android:textSize="16sp" />

        <Button
            android:id="@+id/dataButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/Activity2_title"
            android:textSize="16sp" />

        <Button
            android:id="@+id/randomButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/Activity3_title"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>