<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataActivity">

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="18dp"
        android:text="@string/driver_license"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:text="@string/more_than18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataEmail" />

    <EditText
        android:id="@+id/dataNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint='Your name'
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataNickEdit" />

    <EditText
        android:id="@+id/dataEmailEdit"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint='Your e-mail'
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataPhoneEdit" />

    <EditText
        android:id="@+id/dataPhoneEdit"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint='Your phone number'
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataNameEdit" />

    <TextView
        android:id="@+id/dataName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/data_name"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataNick" />

    <TextView
        android:id="@+id/dataEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/data_email"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataPhone" />

    <TextView
        android:id="@+id/dataPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/data_phone"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataName" />

    <TextView
        android:id="@+id/dataNick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/data_nick"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dataNickEdit"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint='Your nickname'
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="58dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="20dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataEmailEdit" />
</androidx.constraintlayout.widget.ConstraintLayout>